WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12116
REGRESSION: ASSERTION FAILED: URL in +[WebDataProtocol _webIsDataProtocolURL:]
https://bugs.webkit.org/show_bug.cgi?id=12116
Summary
REGRESSION: ASSERTION FAILED: URL in +[WebDataProtocol _webIsDataProtocolURL:]
Alexey Proskuryakov
Reported
2007-01-04 14:18:42 PST
Steps to reproduce: 1) Open the bug URL 2) Click on any image at the right side of the story ASSERTION FAILED: URL (/Users/ap/WebKit/WebCore/loader/mac/WebDataProtocol.mm:223 +[WebDataProtocol _webIsDataProtocolURL:]) Thread 0 Crashed: 0 com.apple.WebCore 0x014875d8 +[WebDataProtocol _webIsDataProtocolURL:] + 92 1 com.apple.WebCore 0x01493d6c WebCore::ResourceLoader::didReceiveResponse(WebCore::ResourceResponse const&) + 204 (ResourceLoaderMac.mm:261) 2 com.apple.WebCore 0x014959f8 WebCore::MainResourceLoader::continueAfterContentPolicy(WebCore::PolicyAction, WebCore::ResourceResponse const&) + 924 (MainResourceLoaderMac.mm:253) 3 com.apple.WebCore 0x01495c2c WebCore::MainResourceLoader::continueAfterContentPolicy(WebCore::PolicyAction) + 180 (MainResourceLoaderMac.mm:270) 4 com.apple.WebCore 0x01495c7c WebCore::MainResourceLoader::callContinueAfterContentPolicy(void*, WebCore::PolicyAction) + 44 (MainResourceLoaderMac.mm:262) 5 com.apple.WebCore 0x0148c048 WebCore::PolicyCheck::call(WebCore::PolicyAction) + 264 (FrameLoaderMac.mm:1324) 6 com.apple.WebCore 0x014c2f80 WebCore::FrameLoader::continueAfterContentPolicy(WebCore::PolicyAction) + 76 (FrameLoader.cpp:2287) 7 com.apple.WebKit 0x003d1800 WebFrameLoaderClient::receivedPolicyDecison(WebCore::PolicyAction) + 392 (WebFrameLoaderClient.mm:989) 8 com.apple.WebKit 0x003d27c8 -[WebFramePolicyListener receivedPolicyDecision:] + 220 (WebFrameLoaderClient.mm:1084) 9 com.apple.WebKit 0x003d1610 -[WebFramePolicyListener use] + 64 (WebFrameLoaderClient.mm:1100)
Attachments
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2007-01-04 15:13:10 PST
The problem was an uninitialized variable. Fixed in
r18593
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug