        Reviewed by Brady.

http://bugs.webkit.org/show_bug.cgi?id=12116
        REGRESSION: ASSERTION FAILED: URL in +[WebDataProtocol _webIsDataProtocolURL:]

        <rdar://problem/4908910>
        REGRESSION: After switching to Bookmarks view, the browser window is completely empty (no bookmarks are displayed)

        * platform/network/ResourceResponse.h:
        (WebCore::ResourceResponse::ResourceResponse):
        Initialize m_isNull



Canonical link: https://commits.webkit.org/15620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18593 268f45cc-cd09-0410-ab3c-d52691b4dbfc